apps/mcp/ha-mcp/route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-mcp
  namespace: mcp
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: atoca-house-internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - ha-mcp.atoca.house
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mcp-ha-mcp-proxy
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
